--- a/myblog/templates/home.html
+++ b/myblog/templates/home.html
@@ -13,24 +13,41 @@
     {# </ul>#}
 
 <body>
+    <div id="pic" class="carousel slide" data-ride="carousel">
 
-    <div id="demo" class="carousel slide" data-ride="carousel">
+        <!-- 指示符 -->
+        <ul class="carousel-indicators">
+            <li data-target="#pic" data-slide-to="0" class="active"></li>
+            <li data-target="#pic" data-slide-to="1"></li>
+            <li data-target="#pic" data-slide-to="2"></li>
+            <li data-target="#pic" data-slide-to="3"></li>
+        </ul>
+
         <!-- 轮播图片 -->
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="https://img.xjh.me/random_img.php?type=bg&ctype=nature&return=302">
             </div>
-            <div class="carousel-item active">
-                <img src="https://img.xjh.me/random_img.php?type=bg&ctype=nature&return=302">
+            <div class="carousel-item">
+                <img src="http://api.mtyqx.cn/api/random.php">
             </div>
-            <div class="carousel-item active">
-                <img src="https://img.xjh.me/random_img.php?type=bg&ctype=nature&return=302">
+            <div class="carousel-item">
+                <img src="http://www.dmoe.cc/random.php">
+            </div>
+            <div class="carousel-item">
+                <img src="https://api.ixiaowai.cn/api/api.php">
             </div>
         </div>
-    </div>
-</body>
 
-<body>
+        <!-- 左右切换按钮 -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
     <hr>
     <h1>Posts</h1>
     <ul>
