--- a/myblog/templates/article_detail.html
+++ b/myblog/templates/article_detail.html
@@ -19,7 +19,7 @@
             <div class="col-9">
                 <h1>{{ post.title }}<br/></h1>
                 <h3><em>{{ post.snippet }}</em></h3>
-                <h3><em>Category:{{ post.category.name }}</em></h3>
+                <h3><em>Category: {{ post.category.name }}</em></h3>
                 <div class="card mb-2">
                     <div class="row g-1">
                         <div class="col-md-4">
@@ -68,10 +68,12 @@
                         {% endif %}
                 </div>
             </div>
-            <div class="col-3 mt-4">
-                <h4 class="widget-title">Menu</h4>
-                {{ toc | safe }}
-            </div>
+            {% if toc %}
+                <div class="col-3 mt-4">
+                    <h4 class="widget-title">Menu</h4>
+                    {{ toc | safe }}
+                </div>
+            {% endif %}
         </div>
     </div>
     <div>
@@ -81,7 +83,7 @@
             {{ body | safe }}
         </div>
     </div>
-
+    <hr>
     <div>
         <form action="{% url 'like_post' post.pk %}" method="post">
             {% csrf_token %}
