--- a/myblog/templates/cats.html
+++ b/myblog/templates/cats.html
@@ -1,25 +1,29 @@
 {% extends 'base.html' %}
 {% block title %}
-{{ page_obj }}
+    {% if post_list %}
+    {% else %}
+        No Content
+    {% endif %}
 {% endblock %}
 {% block content %}
-    {% for post in post_list %}
-        <li>
-            <small>
-                <a href="{% url 'article_detail' post.pk %}">{{ post.title }}</a>
-                By:
-                {% if post.author.profile.id %}
-                    <a href="{% url 'show_profile_page' post.author.profile.id %}">{{ post.author.username }}</a>
-                {% else %}
-                    {{ post.author.username }}
-                {% endif %}
-                {{ post.post_date }}
-                <small>浏览量：{{ post.views }} 点赞数：{{ post.total_like }} 评论量：{{ post.comment_set.count }} </small>
-                <br/>
-                {{ post.snippet }}
-                <br/>
-                <br/>
-            </small>
-        </li>
-    {% endfor %}
+    {% if post_list %}
+        {% for post in post_list %}
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h4 class="card-title"><a href="{% url 'article_detail' post.pk %}">{{ post.title }}</a></h4>
+                    <p class="card-text">{% if post.author.profile.id %}
+                        <a href="{% url 'show_profile_page' post.author.profile.id %}">{{ post.author.username }}</a>
+                    {% else %}
+                        {{ post.author.username }}
+                    {% endif %}</p>
+                    <p class="card-text">{{ post.snippet }}</p>
+                    <p class="card-text"><small class="text-muted">{{ post.modified_date }} 浏览量：{{ post.views }}
+                        点赞数：{{ post.total_like }}
+                        评论量：{{ post.comment_set.count }}</small></p>
+                </div>
+            </div>
+        {% endfor %}
+    {% else %}
+        <h1>No Content</h1>
+    {% endif %}
 {% endblock %}
