--- a/myblog/templates/home.html
+++ b/myblog/templates/home.html
@@ -1,65 +1,56 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% if user.is_authenticated %}
-        {# Hello{{% user.id %}}#}
-    {% endif %}
-    {# <h1>Category</h1>#}
-    {# <ul>#}
-    {# {% for cats in cats_menu %}#}
-    {# <li>#}
-    {# <a class="dropdown-item" href="{% url 'category' cats.name|slugify %}">{{ cats.name.title }}</a>#}
-    {# </li>#}
-    {# {% endfor %}#}
-    {# </ul>#}
-
     <body>
-    {#    <div id="pic" class="carousel slide" data-ride="carousel">#}
-    {##}
-    {#        <!-- 指示符 -->#}
-    {#        <ul class="carousel-indicators">#}
-    {#            <li data-target="#pic" data-slide-to="0" class="active"></li>#}
-    {#            <li data-target="#pic" data-slide-to="1"></li>#}
-    {#            <li data-target="#pic" data-slide-to="2"></li>#}
-    {#        </ul>#}
-    {##}
-    {#        <!-- 轮播图片 -->#}
-    {#        <div class="carousel-inner">#}
-    {##}
-    {#            <div class="carousel-item active">#}
-    {#                <img src="http://api.mtyqx.cn/api/random.php">#}
-    {#            </div>#}
-    {#            <div class="carousel-item">#}
-    {#                <img src="http://www.dmoe.cc/random.php">#}
-    {#            </div>#}
-    {#            <div class="carousel-item">#}
-    {#                <img src="https://api.ixiaowai.cn/api/api.php">#}
-    {#            </div>#}
-    {#        </div>#}
-    {##}
-    {#    </div>#}
-    {#    <hr>#}
-    <h1>Posts</h1>
-    <div>
-        <ul>
-            {% for post in post_list %}
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <a href="{% url 'article_detail' post.pk %}"><h4 class="card-title">{{ post.title }}</h4></a>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <div>
+                    {% if category_list %}
+                        <h1>Category</h1>
+                        <ol class="list-group list-group-numbered">
+                            {% for cats in category_list %}
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-bold"></div>
+                                        <a class="dropdown-item" href="{% url 'cats' cats.pk %}">{{ cats.name }}</a>
+                                    </div>
+                                    <span class="badge bg-primary rounded-pill">{{ cats.posts_num }}</span>
+                                </li>
+                            {% endfor %}
+                        </ol>
+                    {% else %}
+                    {% endif %}
+                </div>
+            </div>
+            <div class="col-9">
+                <div>
+                    <h1>Hot Posts💥</h1>
+                    <div>
+                        {% for post in post_list %}
+                            <div class="card mb-3">
+                                <div class="card-body">
+                                    <a href="{% url 'article_detail' post.pk %}"><h4
+                                            class="card-title">{{ post.title }}</h4>
+                                    </a>
 
-                        <p class="card-text">{% if post.author.profile.id %}
-                            <a href="{% url 'show_profile_page' post.author.profile.id %}">{{ post.author.username }}</a>
-                        {% else %}
-                            {{ post.author.username }}
-                        {% endif %}</p>
-                        <p class="card-text">{{ post.snippet }}</p>
-                        <p class="card-text"><small class="text-muted">{{ post.modified_date }} 浏览量：{{ post.views }}
-                            点赞数：{{ post.total_like }}
-                            评论量：{{ post.comment_set.count }}</small></p>
+                                    <p class="card-text">{% if post.author.profile.id %}
+                                        🖊
+                                        <a href="{% url 'show_profile_page' post.author.profile.id %}">{{ post.author.username }}</a>
+                                    {% else %}
+                                        {{ post.author.username }}
+                                    {% endif %}</p>
+                                    <p class="card-text">{{ post.snippet }}</p>
+                                    <p class="card-text"><small class="text-muted">updated: {{ post.modified_date }}
+                                        👀 {{ post.views }}
+                                        👍 {{ post.total_like }}
+                                        👄 {{ post.comment_set.count }}</small></p>
+                                </div>
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
-            {% endfor %}
-        </ul>
+            </div>
+        </div>
     </div>
-
     </body>
 {% endblock %}
