Renew namespace for htmls

--- a/members/templates/registration/password_success.html
+++ b/members/templates/registration/password_success.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <h1>Password has been changed successfully!</h1>
-    <a href="{% url 'myblog:home' %}">
+    <a href="{% url 'forum:home' %}">
         <button class="btn btn-dark">Go home</button>
     </a>
 {% endblock %}
