--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             {{ form.media }}
-            <a href="{% url 'myblog:home' %}">
+            <a href="{% url 'forum:home' %}">
                 <button class="btn btn-dark">Confirm</button>
             </a>
         </form>
