--- a/forum/templates/article_detail.html
+++ b/forum/templates/article_detail.html
@@ -34,7 +34,8 @@
                                 <h5 class="card-title">{{ post.author.first_name }} {{ post.author.last_name }}</h5>
                                 <p class="small text-muted">
                                     {% if post.author.profile.id %}
-                                    <a href="{% url 'members:show_profile_page' post.author.profile.id %}">Profile Page</a>
+                                    <a href="{% url 'members:show_profile_page' post.author.profile.id %}">Profile
+                                        Page</a>
                                     {% endif %}
                                     {% if post.author.profile.website_url %}
                                     | <a href="{{ post.author.profile.website_url }}">Website</a>
@@ -66,7 +67,6 @@
                     </div>
                     {% endif %}
                 </div>
-
             </div>
         </div>
     </div>
